lib/src/compiler/tests/testdata/errors/89.out
error[E001]: syntax error
 --> line:2:17
  |
2 |   condition: 1  1 == 1
  |                 ^ expected `of`, closing brace `}`, dot `.`, opening bracket `[`, opening parenthesis `(`, operator, or percent `%`
  |